Solving comments on previous PR

--- a/pytket/extensions/quest/testing_backend.ipynb
+++ b/pytket/extensions/quest/testing_backend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,13 +206,13 @@
     "        *_1Q_GATES,\n",
     "        OpType.Barrier,\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    def __init__(\n",
     "        self,\n",
     "        result_type: str = \"state_vector\",\n",
     "    ) -> None:\n",
     "        \"\"\"\n",
-    "        Backend for running simulations on the pyQuest simulator\n",
+    "        Backend for running simulations on the QuEST simulator\n",
     "\n",
     "        :param result_type: Indicating the type of the simulation result\n",
     "            to be returned. It can be either \"state_vector\" or \"density_matrix\".\n",
@@ -228,18 +228,16 @@
     "        )\n",
     "        self._result_type = result_type\n",
     "        self._sim: Type[Union[Register]]\n",
+    "        self._sim = Register\n",
     "        if result_type == \"state_vector\":\n",
-    "            self._density_matrix=False\n",
-    "            self._sim = Register\n",
+    "            self._density_matrix = False\n",
     "            self._supports_density_matrix = False\n",
     "        elif result_type == \"density_matrix\":\n",
-    "            self._density_matrix=True\n",
-    "            self._sim = Register\n",
+    "            self._density_matrix = True\n",
     "            self._supports_state = False\n",
     "            self._supports_density_matrix = True\n",
     "        else:\n",
     "            raise ValueError(f\"Unsupported result type {result_type}\")\n",
-    "\n",
     "\n",
     "    @property\n",
     "    def _result_id_type(self) -> _ResultIdTuple:\n",
@@ -293,15 +291,12 @@
     "        circuits: Sequence[Circuit],\n",
     "        n_shots: int | Sequence[int] | None = None,\n",
     "        valid_check: bool = True,\n",
-    "        **kwargs: int | float | str | None\n",
+    "        **kwargs: int | float | str | None,\n",
     "    ) -> List[ResultHandle]:\n",
     "        circuits = list(circuits)\n",
     "\n",
     "        if valid_check:\n",
     "            self._check_all_circuits(circuits, nomeasure_warn=False)\n",
-    "\n",
-    "        seed = cast(Optional[int], kwargs.get(\"seed\"))\n",
-    "        rng = Random(seed) if seed else None\n",
     "\n",
     "        handle_list = []\n",
     "        for circuit in circuits:\n",
@@ -314,7 +309,7 @@
     "            if self._result_type == \"state_vector\":\n",
     "                state = quest_state[:]  # type: ignore\n",
     "            else:\n",
-    "                state = quest_state[:,:]  # type: ignore\n",
+    "                state = quest_state[:, :]  # type: ignore\n",
     "            qubits = sorted(circuit.qubits, reverse=False)\n",
     "\n",
     "            if self._result_type == \"state_vector\":\n",
@@ -330,15 +325,11 @@
     "            handle = ResultHandle(str(uuid4()))\n",
     "            if self._result_type == \"state_vector\":\n",
     "                self._cache[handle] = {\n",
-    "                    \"result\": BackendResult(\n",
-    "                        state=state, q_bits=qubits\n",
-    "                    )\n",
+    "                    \"result\": BackendResult(state=state, q_bits=qubits)\n",
     "                }\n",
     "            else:\n",
     "                self._cache[handle] = {\n",
-    "                    \"result\": BackendResult(\n",
-    "                        density_matrix=state, q_bits=qubits\n",
-    "                    )\n",
+    "                    \"result\": BackendResult(density_matrix=state, q_bits=qubits)\n",
     "                }\n",
     "\n",
     "            handle_list.append(handle)\n",
@@ -354,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
